apiproduct/tracks/tracks-apiproduct-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tracks-apiproduct
  namespace: tracks
  labels:
    app: tracks-rest-api-1.0
spec:
  # parentRefs:
  #   - name: gw
  #     namespace: ingress-gw
  # hostnames:
  #   - "tracks.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /trackapi/v1.0/
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      # Local object reference, so needs to be in the same namespace ....
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: oidc-atv
      backendRefs:
      - name: tracks-rest-api-1-0
        namespace: tracks
        port: 5000
